<resources>
    <string name="app_name">Gym Helper</string>
    <string name="start_timer">Start timer</string>
    <string name="add_task">Add task</string>
    <string name="exercise">Exercise</string>
    <string name="intensity">Intensity</string>
    <string name="sets">Sets</string>
    <string name="reps_1">Reps #1</string>
    <string name="reps_2">Reps #2</string>
    <string name="reps_3">Reps #3</string>
    <string name="reps_4">Reps #4</string>
    <string name="add">Add</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="day_project">Day project</string>
    <string name="workout_project">Workout project</string>
    <string name="log_in_project">Log in Project</string>
    <string name="reset">reset</string>
    <string name="_00_00">00:00</string>
    <string name="set">Set</string>
    <string name="pause">Pause</string>
    <string name="start">Start</string>
    <string name="minutes">Minutes</string>
    <string name="login_image">Login Image</string>
    <string name="please_enter_your_login">Please enter your Account</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="log_in">Log in</string>
    <string name="registration">Don\'t have Account? Please register here.</string>
    <string name="please_confirm_your_password">Please confirm your password</string>
    <string name="change_account_data">Change account data</string>
    <string name="register_new_account">Register new account</string>
    <string name="log_out_from_account">Log out from account</string>
    <string name="register_my_account">Register my account</string>
    <string name="account_name">Your Account name:</string>
    <string name="please_enter_your_email">Please enter your email</string>
    <string name="your_email">Your Email:</string>
    <string name="your_profile">Your profile</string>
    <string name="click_here_to_verify_your_email_address">Click here to verify your Email address</string>
    <string name="change_your_email">Change your email</string>
    <string name="change_your_password">Change your password</string>
    <string name="delete_account">Delete account</string>
    <string name="log_in_successful">Log In Successful</string>
    <string name="empty_email_field">Field Email can\'t be empty</string>
    <string name="empty_password_field">Field Password can\'t be empty</string>
    <string name="field_empty">Field can\'t be empty</string>
    <string name="possitive_number">Please enter a positive number</string>
    <string name="verification_email">Verification Email sent</string>
    <string name="sign_in_with_email">Sign In with Email</string>
    <string name="forgot_password_click_here">Forgot password? Click here.</string>
    <string name="continue_without_account">Continue without Account</string>
    <string name="join_with_your_email">Join with your Email</string>
    <string name="your_account">Your account</string>
    <string name="account_created">Account created</string>
    <string name="account_field">Field Account can\'t be empty</string>
    <string name="email_field_empty">Field Email can\'t be empty</string>
    <string name="password_filed_empty">Field Password can\'t be empty</string>
    <string name="password_6symbols">Your Password must have 6 symbols</string>
    <string name="password_equals">Your password not equals</string>
    <string name="return_to_application">Return to Application</string>
    <string name="alert_dialog_title_login">Please read this and accept.</string>
    <string name="alert_dialog_mess_login">If you will proceed without an account, your progress will not be saved in the Cloud store. So it can be deleted!</string>
    <string name="alert_dialog_login_ok">Yes, I understand this.</string>
    <string name="alert_dialog_login_cancel">Cancel. I will log in.</string>
    <string name="please_enter_your_new_password">Please enter your new password</string>
    <string name="please_confirm_your_new_password">Please confirm your new password</string>
    <string name="please_enter_new_email">Please enter new email</string>
</resources>