<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/background"
    tools:context=".StartFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button_day_project_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/margin5"
                android:text="@string/day_project"
                android:textColor="@color/white"
                android:textStyle="bold">
            </Button>

            <Button
                android:id="@+id/button_workout_project_activity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/margin5"
                android:text="@string/workout_project"
                android:textColor="@color/white"
                android:textStyle="bold">
            </Button>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <Button
                android:id="@+id/button_start_timer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/margin5"
                android:text="@string/start_timer"
                android:textColor="@color/white"
                android:textStyle="bold">
            </Button>

            <Button
                android:id="@+id/button_account_fragment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="@dimen/margin5"
                android:text="@string/your_account"
                android:textColor="@color/white"
                android:textStyle="bold">
            </Button>

        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image_start"
            android:src="@drawable/monster"
            android:contentDescription="@string/login_image">

        </ImageView>

    </LinearLayout>





</FrameLayout>