<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    android:weightSum="2"
    tools:context=".AddProjectActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin10"
        android:layout_weight="1.5"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            app:boxBackgroundMode="outline"
            app:boxStrokeWidth="2dp"
            app:hintAnimationEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:hint="@string/exercise"
                android:inputType="text|textCapSentences" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/margin10"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="2">

            <com.google.android.material.textfield.TextInputLayout

                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.2"
                app:boxBackgroundMode="outline"
                app:boxStrokeWidth="2dp"
                app:hintAnimationEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/editIntensity"
                    android:layout_width="match_parent"
                    android:inputType="textAutoComplete"
                    android:layout_height="wrap_content"
                    android:hint="@string/intensity" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin10"
                android:layout_weight="0.8"
                app:boxBackgroundMode="outline"
                app:boxStrokeWidth="2dp"
                app:hintAnimationEnabled="true">

                <AutoCompleteTextView
                    android:id="@+id/editSets"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="number"
                    android:maxLength="1"
                    android:hint="@string/sets" />

            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="6"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:boxBackgroundMode="outline"
                    android:layout_margin="@dimen/margin5"
                    app:boxStrokeWidth="2dp"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editReps1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:inputType="number"
                        android:singleLine="true"
                        android:maxLength="3"
                        android:hint="@string/reps_1" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:boxBackgroundMode="outline"
                    android:layout_margin="@dimen/margin5"
                    app:boxStrokeWidth="2dp"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editReps2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:inputType="number"
                        android:singleLine="true"
                        android:maxLength="3"
                        android:hint="@string/reps_2" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:boxBackgroundMode="outline"
                    android:layout_margin="@dimen/margin5"
                    app:boxStrokeWidth="2dp"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editReps3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:inputType="number"
                        android:singleLine="true"
                        android:maxLength="3"
                        android:hint="@string/reps_3" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    app:boxBackgroundMode="outline"
                    android:layout_margin="@dimen/margin5"
                    app:boxStrokeWidth="2dp"
                    app:hintAnimationEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/editReps4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:inputType="number"
                        android:singleLine="true"
                        android:maxLength="3"
                        android:hint="@string/reps_4" />


                </com.google.android.material.textfield.TextInputLayout>



            </LinearLayout>


    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnAddProject"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            android:layout_marginHorizontal="@dimen/margin20"
            android:padding="13dp"
            android:maxLines="1"
            android:text="@string/add"
            app:cornerRadius="10dp"
            app:elevation="10dp" />

    </RelativeLayout>


</LinearLayout>